did some work on CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container" id="container">
-            <h1>Connect Four</h1>
+            <h1><img src="logo.png" /></h1>
             <div class="boardcontainer" id="boardcontainer">
                 <label for="board">Choose Board Size:</label>
                 <select name="board" id="initboard">
